In bookmark manager, editing box for the folders in Mac OSX overlapped the selection border. This should fix it.
BUG=51181
TEST=Go to bookmarks manager and right click a folder and select 'Rename...'. The blue borders should not be covered by the input boxes. The text in the input boxes should align exactly with the text before and after editing.


Review URL: http://codereview.chromium.org/6468001

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@74657 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 833a50e4af7129d10725c5f8e898e990a07983c6

--- a/chrome/browser/resources/bookmark_manager/css/bmm.css
+++ b/chrome/browser/resources/bookmark_manager/css/bmm.css
@@ -106,8 +106,8 @@ html[dir=rtl] list > * > button {
 /* Edit mode
 */
 
-list .label input,
-list .url input {
+list [editing] .label input,
+list [editing] .url input {
   /* Do not inherit the line-height */
   font-family: inherit;
   font-size: inherit;
@@ -120,6 +120,17 @@ list .url input {
   -webkit-padding-start: 1px;
   -webkit-padding-end: 3px;
   text-decoration: none;
+}
+
+.tree-item [editing] input {
+  margin: 0;
+  padding: 0;
+  -webkit-margin-start: -3px;
+  -webkit-padding-end: 7px;
+}
+
+html[os=mac] .tree-label [editing] input {
+  padding-top: 1px;
 }
 
 html:not([os=mac]) list .label input,
